--- a/bio.html
+++ b/bio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> bio | neec nonso | Documentary Photographer</title>
+    <title> bio | neec nonso | visual artist</title>
     <meta name="description" content="">
 
     <!-- Style Links -->
@@ -103,7 +103,7 @@
             <p class="biography-title">bio.</p>
 
             <p class='biography'>
-                neec nonso is a nigerian visual artist. He was born in 1990 in aguleri, anambra state. he captures
+                neec nonso is a nigerian visual artist. he was born in 1990 in aguleri, anambra state. he captures
                 everyday life and its nuances in communities across nigeria. he works predominantly with photography and
                 aims to inspire
                 conversations,evoking deep emotions and compelling observers of his work to excavate their memories and
