--- a/bio.html
+++ b/bio.html
@@ -112,6 +112,8 @@
 
         <aside><img class="bio-image" src="images/neec.nonso-bio.webp" width="400px" alt=""></aside>
 
+            <aside><img class="bio-image-laptop" src="images/neec.nonso-8250 landscape.jpg" width="1000px" alt=""></aside>
+
         <section class="biography-section">
             <p class="biography-title">bio.</p>
 
