--- a/bio.html
+++ b/bio.html
@@ -8,12 +8,7 @@
     <title> bio | neec nonso | visual artist</title>
     <!-- Description -->
     <meta name="author" content="www.pixelsinframe.com">
-    <meta name="description" content="neec nonso is a nigerian artist who captures the 
-everyday life and its nuances. he works predominantly, 
-in digital format and travels extensively across 
-nigeria to capture the beauty and chaos in the 
-society; challenging stereotypical narratives about 
-nigeria and africa at large.">
+    <meta name="description" content="neec nonso is a nigerian artist who captures the everyday life and its nuances. he works predominantly, in digital format and travels extensively across nigeria to capture the beauty and chaos in the society; challenging stereotypical narratives about nigeria and africa at large.">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
     <meta name="robots" content="index, follow">
