--- a/bio.html
+++ b/bio.html
@@ -45,7 +45,7 @@
         <nav class='navbar'>
 
 
-            <a class="logo-link" href='index.html'>
+            <a class="logo-link" href='index'>
                 <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
             </a>
 
@@ -53,17 +53,17 @@
             <ul class='nav-list'>
 
                 <li class='list-item'>
-                    <a href='bio.html'> bio</a>
+                    <a href='bio'> bio</a>
                 </li>
 
                 <li class='list-item'>
-                    <a href='projects.html'>projects </a>
+                    <a href='projects'>projects </a>
                 </li>
                 <li class='list-item'>
-                    <a href='exhibition.html'>exhibitions </a>
+                    <a href='exhibition'>exhibitions </a>
                 </li>
                 <li class='list-item'>
-                    <a href='contact.html'>contact </a>
+                    <a href='contact'>contact </a>
                 </li>
 
             </ul>
@@ -200,7 +200,6 @@
         <!-- End of Footer -->
 
   
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script>
@@ -241,7 +240,7 @@
                 scrub: 1
             },
             stagger: { amount: 0.5 },
-            scale: 0.8,
+            scale: 0.5,
             duration: 1,
             ease: "power1.inOut"
         });
