--- a/bio.html
+++ b/bio.html
@@ -29,9 +29,8 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="./css/tablet.css">
+<link rel="stylesheet" href="minify.css">
+
 </head>
 
 <body>
