--- a/bio.html
+++ b/bio.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     
     <meta name="robots" content="index, follow">
-    <meta name="description" content="neec nonso is a nigerian visual artist">
+    <meta name="description" content="neec nonso is a young, vibrant and self-taught visual artist who is making waves in the contemporary african art scene. he captures everyday life and its nuances in communities across nigeria.">
     <meta name="keywords"
         content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
     
@@ -115,10 +115,10 @@
 
         <aside><img class="bio-image" src="images/neec.nonso-bio.webp" width="400px" alt=""></aside>
 
-        <aside><img class="bio-image-laptop" src="images/neec.nonso-8250 landscape.webp" width="1000px" alt=""></aside>
+        <aside><img class="bio-image-laptop" src="images/neec-nonso-web.webp"  alt=""></aside>
 
         <section class="biography-section">
-            <p class="biography-title">bio.</p>
+            <h1 class="biography-title">bio.</h1>
 
             <p class='biography'>
                 neec nonso is a nigerian visual artist. he was born in 1990 in aguleri, anambra state. he captures
