--- a/bio.html
+++ b/bio.html
@@ -35,7 +35,8 @@
     <meta name="twitter:image" content="images/ogimage.png" />
 
 
-    <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/mobile.css">
 
 </head>
 
