--- a/bio.html
+++ b/bio.html
@@ -35,8 +35,8 @@
     <meta name="twitter:image" content="images/ogimage.png" />
 
 
-<link rel="stylesheet" href="./css/style.css">
-<link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mobile.css">
 
 </head>
 
@@ -263,9 +263,10 @@
         tl.from(".bio-image", { x: 200, opacity: 0, duration: 1.5 })
             .from(".bio-image-laptop", { x: 200, opacity: 0, duration: 1.5 })
             .from(".biography-section", { x: -200, opacity: 0, duration: 1.5 })
-        tl.from(".extra", { x: 200, opacity: 0, duration: 1.5 })
+            .from(".App-logo", { y: -200, opacity: 0.5, duration: 1.5 })
+            .from(".list-item", { y: -200, opacity: 0.5, duration: 1.5 })
+            .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
             .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
-        //    .from(".designer", { y: 10, opacity: 0, duration: 1.5 });
 
 
     </script>
