--- a/bio.html
+++ b/bio.html
@@ -49,7 +49,7 @@
     <div class="header">
 
         <nav class='navbar'>
-            <a class="logo-link" href=''>
+            <a class="logo-link" href='/'>
                 <img src="images/neec nonso logo.png" class='App-logo' alt='logo' />
             </a>
 
