--- a/bio.html
+++ b/bio.html
@@ -115,9 +115,9 @@
 
     <div class='about-page'>
 
-        <aside><img class="bio-image" src="images/neec.nonso-bio.webp" width="400px" alt=""></aside>
+        <aside><img class="bio-image" src="images/neec.nonso-bio.webp" width="400px" alt="photo of neec nonso"></aside>
 
-        <aside><img class="bio-image-laptop" src="images/neec-nonso-web.webp" alt=""></aside>
+        <aside><img class="bio-image-laptop" src="images/neec-nonso-web.webp" alt="image of neec nonso"></aside>
 
         <section class="biography-section">
             <h1 class="biography-title">bio.</h1>
