--- a/bio.html
+++ b/bio.html
@@ -22,7 +22,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
-    <meta property="og:url" content="http://neecnonso.com" />
+    <meta property="og:url" content="https://www.neecnonso.com/bio" />
     <meta property="og:image" content="images/ogimage.png" />
 
 
