--- a/bio.html
+++ b/bio.html
@@ -88,19 +88,19 @@
         <div class='extra'>
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.instagram.com/neecnonso/'>
-                <img class="extra-icon-image" src="images/logo-instagram.svg" alt='extra-icon-image' />
+                <img class="extra-icon-image" src="../assets/icons/logo-instagram.svg" alt='extra-icon-image' />
             </a>
 
             <a rel='noreferrer noopener' target='_blank' href='https://web.facebook.com/neecnonso/'>
-                <img class="extra-icon-image" src="images/logo-facebook.svg" alt='extra-icon-image' />
+                <img class="extra-icon-image" src="../assets/icons/logo-facebook.svg" alt='extra-icon-image' />
             </a>
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.linkedin.com/in/neecnonso/'>
-                <img class="extra-icon-image" src="images/logo-linkedin.svg" alt='extra-icon-image' />
+                <img class="extra-icon-image" src="../assets/icons/logo-linkedin.svg" alt='extra-icon-image' />
             </a>
 
             <a rel='noreferrer noopener' target='_blank' href='https://www.twitter.com/neecnonso'>
-                <img class="extra-icon-image" src="images/logo-twitter.svg" alt='extra-icon-image' />
+                <img class="extra-icon-image" src="../assets/icons/logo-twitter.svg" alt='extra-icon-image' />
             </a>
 
 
