--- a/bio.html
+++ b/bio.html
@@ -44,7 +44,7 @@
 
     <!-- Back to top button -->
     <img class="back-to-top-btn" onclick="topFunction()" id="myBtn" width="50px"
-        src="./assets/chevron-up-circle-outline.svg" alt="back to top icon">
+        src="./assets/icons/chevron-up-circle-outline.svg" alt="back to top icon">
 
     <!--- Start of Navbar -->
 
@@ -119,7 +119,7 @@
 
             <picture>
                 <source media="(max-width: 500px)" srcset="./assets/bio-mobile.webp">
-                <img src="assets/bio-laptop.webp" style="width:auto;">
+                <img src="assets/bio-laptop.webp" alt="neec nonso potrait">
             </picture>
 
 
