--- a/bio.html
+++ b/bio.html
@@ -119,7 +119,7 @@
 
             <picture>
                 <source media="(max-width: 500px)" srcset="./assets/bio-mobile.webp">
-                <img src="assets/bio-laptop.webp" alt="neec nonso potrait">
+                <img loading="lazy" src="assets/bio-laptop.webp" alt="neec nonso potrait">
             </picture>
 
 
