--- a/bio.html
+++ b/bio.html
@@ -135,6 +135,7 @@
                 reality. his practice spans from the documentary to the deliberately posed, capturing textures of
                 everyday life and
                 rites of passage as well as their nuances in communities across nigeria.
+
             </p>
 
             <p class='biography'>
@@ -160,15 +161,33 @@
 
             </p>
 
+            <p class="biography">
+                neec nonso established aguleri stories in october 2018 with the goal of sharing the first-hand accounts
+                of the igbo
+                community of aguleri in south-eastern nigeria, which has a history of boundary disputes with its
+                neighbors. in 2019, he
+                received a one-year residency with the african artists foundation in lagos after winning the best
+                portfolio prize at the
+                lagos photo festival. neec emerged as runner up in the 10th edition of the vantage point sharjah
+                photography award,
+                given by the sharjah art foundation, in 2022. the same year, he was a finalist for the artx prize.
+            </p>
+
             <p class='biography'>
-                neec nonso is a member of apjd [africa photo-journalism database]; a database of photo journalists from
-                africa and 1884
-                photo: a collective of visual artists experiencing and documenting african stories and responding to
-                global issues
-                through an african view. <br> <br>
+                neec nonso is a member of 1884 photo, a collective of visual artists who experience and document african
+                stories and
+                respond to global concerns from an african perspective, as well as the africa photo-journalism database
+                [apjd], a
+                network of photo journalists from africa.
+
+                neec has taken part in a number of exhibitions; a list of them is available
+                <br> <br>
                 <span>For a chronological list of exhibition neec has participated in, see <a
                         class="link-to-exhibitions" href="./exhibition">here</a>
-                </span>
+                </span>.
+
+
+
             </p>
 
         </section>
