--- a/bio.html
+++ b/bio.html
@@ -128,8 +128,8 @@
         <section class="bio-image-section">
 
             <picture>
-                <source media="(max-width: 500px)" srcset="./assets/bio-mobile.webp">
-                <img loading="lazy" src="assets/bio-laptop.webp" alt="neec nonso potrait">
+                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669907059/bio/bio-mobile_yx3qdw.webp">
+                <img loading="lazy" src="https://res.cloudinary.com/da93q413z/image/upload/v1669907059/bio/bio-laptop_plgjus.webp" alt="neec nonso potrait">
             </picture>
 
 
