--- a/bio.html
+++ b/bio.html
@@ -122,7 +122,6 @@
 
     <!-- Start of Main Page -->
 
-
     <div class='about-page'>
 
         <section class="bio-image-section">
@@ -157,20 +156,6 @@
                 nigeria.
             </p>
 
-            <p class='biography'>
-                in october 2018, neec nonso founded aguleri stories - an online-based media platform that focuses on
-                telling the inside
-                stories of aguleri; an igbo community of south-eastern nigeria, notorious for its boundary wars with
-                neighbours. in
-                2019, he emerged as the winner of best portfolio, lagosphoto festival, and was awarded a one-year
-                residency programme
-                with african artists’ foundation, lagos.
-                in 2022, neec emerged as a runner-up for the 10th edition of vantage point sharjah, a prize for
-                photography by sharjah
-                art foundation.
-
-            </p>
-
             <p class="biography">
                 neec nonso established aguleri stories in october 2018 with the goal of sharing the first-hand accounts
                 of the igbo
@@ -192,7 +177,7 @@
 
                 neec has taken part in a number of exhibitions; a list of them is available
                 <br> <br>
-                <span>For a chronological list of exhibition neec has participated in, see <a
+                <span>for a chronological list of exhibition neec has participated in, see <a
                         class="link-to-exhibitions" href="./exhibition">here</a>
                 </span>.
 
