--- a/bio.html
+++ b/bio.html
@@ -8,7 +8,8 @@
     <title> bio | neec nonso | visual artist</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
+    <link rel="shortcut icon" type="image/png"
+        href="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/favicon_j4hvqa.png">
 
     <meta name="robots" content="index, follow">
     <meta name="description"
@@ -23,7 +24,8 @@
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
     <meta property="og:url" content="https://www.neecnonso.com/bio" />
-    <meta property="og:image" content="assets/icons/ogimage.png" />
+    <meta property="og:image"
+        content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
 
     <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
@@ -32,7 +34,8 @@
     <meta name="twitter:site" content="@neecnonso" />
     <meta name="twitter:title" content="neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
-    <meta name="twitter:image" content="assets/icons/ogimage.png" />
+    <meta name="twitter:image"
+        content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
 
     <link rel="stylesheet" href="./css/style.css">
@@ -127,8 +130,11 @@
         <section class="bio-image-section">
 
             <picture>
-                <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669907059/bio/bio-mobile_yx3qdw.webp">
-                <img loading="lazy" src="https://res.cloudinary.com/da93q413z/image/upload/v1669907059/bio/bio-laptop_plgjus.webp" alt="neec nonso potrait">
+                <source media="(max-width: 500px)"
+                    srcset="https://res.cloudinary.com/da93q413z/image/upload/v1669907059/bio/bio-mobile_yx3qdw.webp">
+                <img loading="lazy"
+                    src="https://res.cloudinary.com/da93q413z/image/upload/v1669907059/bio/bio-laptop_plgjus.webp"
+                    alt="neec nonso potrait">
             </picture>
 
 
